# Studying-the-Geometric-Convergence-Behaviour-of-Neural-Radiance-Fields-for-Improving-Training-Time

./: README.md  index.html  pyproject.toml
nerfstudio/: output.json
nerfstudio/cameras/: cameras.py  rays.py
nerfstudio/engine/: callbacks.py  trainer.py
nerfstudio/exporter/: exporter_utils.py
nerfstudio/model_components/: ray_generators.py  ray_samplers.py
nerfstudio/scripts/: train.py
nerfstudio/scripts/completions/bash/: _ns-dev-sync-viser-message-defs  _ns-dev-test  _ns-download-data  _ns-eval  _ns-export  _ns-install-cli  _ns-process-data  _ns-render  _ns-train  _ns-viewer
nerfstudio/scripts/completions/zsh/: _ns-dev-sync-viser-message-defs  _ns-dev-test  _ns-download-data  _ns-eval  _ns-export  _ns-install-cli  _ns-process-data  _ns-render  _ns-train  _ns-viewer
reconstruction/: reconstruction_config.py  reconstruction_datamanager.py  reconstruction_field.py  reconstruction_model.py  reconstruction_pipeline.py
